--- a/front-end-vue/package.json
+++ b/front-end-vue/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.13",
+    "jquery": "^3.7.0",
     "neovis.js": "^2.1.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
