--- a/front-end-vue/package.json
+++ b/front-end-vue/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
+    "echarts": "^5.4.2",
     "element-ui": "^2.15.13",
     "jquery": "^3.7.0",
     "neovis.js": "^2.1.0",
